@@ -1,3 +1,7 @@
+2006-10-01 Graham J Lee <graham.lee@operatelecom.com>
+
+        * configure.ac:  Fix to use GNUSTEP_CONFIG_FILE environment variable.
+	
 2006-09-14 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* JDBC push and pop local frames to avoid memory leaks.
